--- a/index.html
+++ b/index.html
@@ -4,7 +4,40 @@
   Branch_Evangeline
     </title>
   </head>
-  <body>
-
+  <body text="Comic Sans MS" align="center">
+<h1>Selamat datang</h1>
+<table width=1000 height=100 border=4 bordercolor=black  cellpadding=4 align=center cellspacing=3>
+  <tr>
+    <td>
+      No.
+    </td>
+    <td>
+      Nama
+    </td>
+    <td>
+      Kelas
+    </td>
+  </tr>
+    <tr>
+      <td>
+        1.
+      </td>
+      <td>
+        Evangeline Audrey K.
+      </td>
+      <td>
+        X RPL-1
+      </td>
+    </tr>
+    <tr>
+        <td>
+          2.
+        </td>
+        <td>
+        </td>
+        <td>
+        </td>
+    </tr>
+</table>
   </body>
 </html>
